--- a/src/components/BookingModal.css
+++ b/src/components/BookingModal.css
@@ -114,8 +114,12 @@
   border: 1px solid #ccc;
   border-radius: 4px;
   padding: 0.5rem;
-  margin-bottom: 1rem;
   font-size: 1rem;
   width: 80%;
   display: block;
+}
+
+.container .box .modal .modal-box .modal-content .customer-form label .error {
+  color: #f00;
+  font-weight: 400;
 }
